finish block sync
