# clover/basic/server/jobs/DotNetworkStatus.js
@@ -1,8 +1,12 @@
-const { networkStatus } = require('../../chains/polkadot/service');
+const { networkStatus, block } = require('../../chains/polkadot/service');
 const _ = require('lodash');
 const Status = require('../../data/models/status');
+const Block = require('../../data/models/block');
 const { getSender } = require('../../socket/socket');
 const { sleep } = require('../../utils/utils');
+const Promise = require('bluebird');
+const { Op } = require('sequelize');
+const LZUTF8 = require('lzutf8');
 
 async function doRun() {
   try {
@@ -37,22 +41,78 @@ async function doRun() {
   return true;
 }
 
-async function runDot() {
-  return new Promise(async (resolve, reject) => {
-    const maxTry = 10;
-    let index = 0;
-    while (index < maxTry) {
-      const result = await doRun();
-      if (result) {
-        console.log('Dot network status ready, and db updated');
-        break;
-      } else {
-        index++;
-        await sleep(3000);
-      }
-    }
-    return Promise.resolve();
+async function syncBlock() {
+  const token = 'Polkadot';
+  const status = await Status.findOne({
+    where: {
+      key: 'current_dot_block'
+    },
+    raw: true
   });
+  let start = _.parseInt(status.value) - 10;
+  start = start < 0 ? 0 : start;
+  while (true) {
+    try {
+      const result = await block(start, token);
+      if (result.block) {
+        const block = result.block;
+        const info = {
+          name: token,
+          block_number: start,
+          block_hash: block.block_identifier.hash,
+          timestamp: block.timestamp,
+          tx_count: block.transactions.length,
+          used: 0
+        };
+
+        info.raw = LZUTF8.compress(JSON.stringify(result), {outputEncoding: 'StorageBinaryString'});
+        Block.create(info);
+        Block.destroy({
+          where: {
+            name: token,
+            block_number: {
+              [Op.lt]: start - 9
+            }
+          }
+        });
+
+        const response = {
+          type: 'network/tick',
+          meta: {
+            network_identifier:{
+              blockchain: token,
+              network: 'Mainnet'
+            },
+          },
+          data: info
+        };
+        getSender() && getSender().send(JSON.stringify(response));
+
+        await sleep(1000);
+        start++;
+      }
+
+    } catch (e) {
+      await sleep(6000);
+    }
+  }
+}
+
+async function runDot() {
+  const maxTry = 10;
+  let index = 0;
+  while (index < maxTry) {
+    const result = await doRun();
+    if (result) {
+      console.log('Dot network status ready, and db updated');
+      break;
+    } else {
+      index++;
+      await sleep(3000);
+    }
+  }
+
+  await syncBlock();
 }
 
 module.exports = {
