# clover/basic/server/services/NetworkService.js
@@ -1,115 +1,0 @@
-/**
- * Copyright (c) 2020 DigiByte Foundation NZ Limited
- *
- * Permission is hereby granted, free of charge, to any person obtaining a copy of
- * this software and associated documentation files (the "Software"), to deal in
- * the Software without restriction, including without limitation the rights to
- * use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
- * the Software, and to permit persons to whom the Software is furnished to do so,
- * subject to the following conditions:
- *
- * The above copyright notice and this permission notice shall be included in all
- * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
- * FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
- * COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
- * IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
- * CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
- */
-
-const RosettaSDK = require('../../../../sdk');
-const Types = RosettaSDK.Client;
-
-const networkIdentifier = require('../network');
-
-/* Data API: Network */
-
-/**
-* Get List of Available Networks
-* This endpoint returns a list of NetworkIdentifiers that the Rosetta server can handle.
-*
-* metadataRequest MetadataRequest
-* returns NetworkListResponse
-* */
-const networkList = async (params) => {
-  const { metadataRequest } = params;
-
-  return new Types.NetworkListResponse(
-    [ networkIdentifier ],
-  );
-};
-
-/**
-* Get Network Options
-* This endpoint returns the version information and allowed network-specific types for a NetworkIdentifier. Any NetworkIdentifier returned by /network/list should be accessible here.  Because options are retrievable in the context of a NetworkIdentifier, it is possible to define unique options for each network.
-*
-* networkRequest NetworkRequest
-* returns NetworkOptionsResponse
-* */
-const networkOptions = async (params) => {
-  const { networkRequest } = params;
-
-  const rosettaVersion = '1.4.0';
-  const nodeVersion = '12.19.0';
-
-  const operationStatuses = [
-    new Types.OperationStatus('Success', true),
-    new Types.OperationStatus('Reverted', false),
-  ];
-
-  const operationTypes = [
-    'Transfer',
-    'Reward',
-  ];
-
-  const errors = [
-    new Types.Error(1, 'not implemented', false),
-  ];
-
-  return new Types.NetworkOptionsResponse(
-    new Types.Version(rosettaVersion, nodeVersion),
-    new Types.Allow(
-      operationStatuses,
-      operationTypes,
-      errors,
-    ),
-  );
-};
-
-/**
-* Get Network Status
-* This endpoint returns the current status of the network requested. Any NetworkIdentifier returned by /network/list should be accessible here.
-*
-* networkRequest NetworkRequest
-* returns NetworkStatusResponse
-* */
-const networkStatus = async (params) => {
-  const { networkRequest } = params;
-
-  const currentBlockIdentifier = new Types.BlockIdentifier(1000, 'block 1000');
-  const currentBlockTimestamp = 1586483189000;
-  const genesisBlockIdentifier = new Types.BlockIdentifier(0, 'block 0');
-  const peers = [
-    new Types.Peer('peer 1'),
-  ];
-
-  return new Types.NetworkStatusResponse(
-    currentBlockIdentifier,
-    currentBlockTimestamp,
-    genesisBlockIdentifier,
-    peers,
-  );
-};
-
-module.exports = {
-  /* /network/list */
-  networkList,
-
-  /* /network/options */
-  networkOptions,
-
-  /* /network/status */
-  networkStatus,
-};
