# sdk/lib/server/api/openapi.yaml
@@ -30,6 +30,27 @@ paths:
       tags:
         - Network
       x-eov-operation-handler: controllers/NetworkController
+  /network/tick:
+    post:
+      description: This is the Tick API
+      operationId: networkTick
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NetworkRequest'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CloverGeneralResponse'
+          description: Expected response to a json
+      summary: Get Network Tick
+      tags:
+        - Network
+      x-eov-operation-handler: controllers/NetworkController
   /network/list:
     post:
       description: This endpoint returns a list of NetworkIdentifiers that the Rosetta
